# anime-girl-chatbot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/anime_girl_chatbot/: __init__.py  config.py  main.py  utils.py
tests/: conftest.py  test_config.py  test_utils.py
