[tool.poetry]
name = "anime-girl-chatbot"
version = "0.1.0"
description = "A chatbot for impersonating your favourite anime character with chatgpt and making a chatbot with it."
authors = ["Mustafa SOYLU <mohkargan@gmail.com>"]
license = "MIT"
readme = "README.md"

# the Python packages that will be included in a built distribution:
packages = [{include = "anime_girl_chatbot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.4.2"
gradio = "^3.47.1"
tomlkit = "^0.12.1"
openai = "^0.28.1"
poetry = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chatbot = "anime_girl_chatbot.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.flake8]
ignore = ["B008", "E501", "W503", "E712", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "F722"]

[tool.pydocstyle]
convention = "google"

[tool.interrogate]
fail-under = 80

[tool.bandit]
exclude_dirs = ["tests", "scripts"]

[tool.licensecheck]
using = "poetry"

[tool.mypy]
disable_error_code = ["attr-defined"]
